--- a/index.html
+++ b/index.html
@@ -89,15 +89,18 @@
         <span class="section_header" id="skills">skills<br><br> </span>
         <div class="skills_container">
             <div class="skills_box">
-            programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
+                <p class="skills_title">programming languages</p>
+                <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
             </div>
 
             <div class="skills_box">
-            software: Unity, Solidworks, Dreamweaver, Premiere<br>
+                <p class="skills_title">software</p>
+                <p class="skills_list">Unity, Solidworks, Dreamweaver, Premiere</p>
             </div>
 
             <div class="skills_box">
-            foreign languages: mandarin chinese, french, japanese<br>
+                <p class="skills_title">foreign languages</p>
+                <p class="skills_list">mandarin chinese, french, japanese</p>
             </div>
 
         </div>
@@ -114,10 +117,16 @@
     <div class="section">
         <span class="section_header" id="projects">projects <br><br> </span>
         <div class="projects_container">
+
+            <a href="http://www-personal.umich.edu/~deannajs/">
             <div class="project_box">
-        [in progress] <br>
-        Video Game Portfolio Website<br>
-        built with: HTML/CSS, Javascript <br><br>
+                <p class="project_title">Video Game Portfolio Website</p>
+                <p class="project_description">
+                    2020 – present
+                    built with: HTML/CSS, Javascript <br>
+                </p>
+            </a>
+                
         </div>
         
         <div class="project_box">
