--- a/index.html
+++ b/index.html
@@ -130,50 +130,50 @@
         </div>
         
         <div class="project_box">
-        Personal Website <br>
-        built with: HTML/CSS, Javascript <br><br>
+            <p class="project_title">Personal Website</p>
+            <p class="project_description">built with: HTML/CSS, Javascript </p>
         </div>
 
         <div class="project_box">
-        Ghost Hosts<br>
-        built with: C# + Unity<br>
-        escape haunted house <br><br>
+            <p class="project_title">Ghost Hosts</p>
+            <p class="project_description">built with: C# + Unity<br>
+            escape haunted house </p>
         </div>
 
         <div class="project_box">
-        Conveyor Cat<br>
-        built with: C# + Unity<br>
-        feed the cats sushi <br><br>
+            <p class="project_title">Conveyor Cat</p>
+            <p class="project_description">built with: C# + Unity<br>
+            feed the cats sushi </p>
         </div>
 
         <div class="project_box">
-        Legend of Zelda <br>
-        built with: C# + Unity <br>
-        the NES legend of zelda game, remastered <br><br>
+            <p class="project_title">Legend of Zelda </p>
+            <p class="project_description">built with: C# + Unity <br>
+            the NES legend of zelda game, remastered </p>
         </div>
 
         <div class="project_box">
-        EZscan <br>
-        built with: swift <br>
-        a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet <br><br>
+            <p class="project_title">EZscan </p>
+            <p class="project_description">built with: swift <br>
+            a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet </p>
         </div>
 
         <div class="project_box">
-        movie selector <br>
-        built with: python <br>
-        from eecs 445 <br><br>
+            <p class="project_title">movie selector </p>
+            <p class="project_description">built with: python <br>
+            from eecs 445 </p>
         </div>
 
         <div class="project_box">
-        OS library <br>
-        built with: C++ <br>
-        from eecs 482 <br><br>
+            <p class="project_title">OS library</p>
+            <p class="project_description">built with: C++ <br>
+            from eecs 482 </p>
         </div>
 
         <div class="project_box">
-        insta485 <br>
-        built with: HTML/CSS, Javascript/jQuery, SQL, python <br>
-        from eecs 485 <br><br>
+            <p class="project_title">insta485</p>
+            <p class="project_description">built with: HTML/CSS, Javascript/jQuery, SQL, python <br>
+            from eecs 485 </p>
         </div>
 
         </div>
