--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <span class="section_header" id="projects">projects <br><br> </span>
         <div class="projects_container">
 
-            <a href="http://www-personal.umich.edu/~deannajs/">
+            <a href="http://www-personal.umich.edu/~deannajs/" target="_blank" class="project_link">
             <div class="project_box">
                 <p class="project_title">Video Game Portfolio Website</p>
                 <p class="project_description">
