swiching to laptop

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="project_box">
                 <p class="project_title">Video Game Portfolio Website</p>
                 <p class="project_description">
-                    2020 – present
+                    2020 – present <br>
                     built with: HTML/CSS, Javascript <br>
                 </p>
             </div>
@@ -130,51 +130,73 @@
                 
             <div class="project_box">
                 <p class="project_title">Personal Website</p>
-                <p class="project_description">built with: HTML/CSS, Javascript </p>
+                <p class="project_description">
+                    2020 – present <br>
+                    built with: HTML/CSS, Javascript 
+                </p>
             </div>
 
             <div class="project_box">
                 <p class="project_title">Ghost Hosts</p>
-                <p class="project_description">built with: C# + Unity<br>
-                escape haunted house </p>
+                <p class="project_description">
+                    mar - apr 2020 <br>
+                    built with: C# + Unity<br>
+                escape haunted house 
+            </p>
             </div>
 
             <div class="project_box">
                 <p class="project_title">Conveyor Cat</p>
-                <p class="project_description">built with: C# + Unity<br>
+                <p class="project_description">
+                    feb 2020 <br>
+                    built with: C# + Unity<br>
                 feed the cats sushi </p>
             </div>
 
             <div class="project_box">
                 <p class="project_title">Legend of Zelda </p>
-                <p class="project_description">built with: C# + Unity <br>
-                the NES legend of zelda game, remastered </p>
+                <p class="project_description">
+                    jan 2020 <br>
+                    built with: C# + Unity <br>
+                    the original NES legend of zelda game
+                </p>
             </div>
             
             <a href="https://devpost.com/software/ezscan-cxkbq6" target="_blank" class="project_link">
             <div class="project_box">
                 <p class="project_title">EZscan </p>
-                <p class="project_description">built with: swift <br>
-                a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet </p>
+                <p class="project_description">
+                    jun 2019 <br>
+                    built with: swift <br>
+                    a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet 
+            </p>
             </div>
             </a>
 
             <div class="project_box">
                 <p class="project_title">movie selector </p>
-                <p class="project_description">built with: python <br>
-                from eecs 445 </p>
+                <p class="project_description">
+                    sep - dec 2019 <br> 
+                    built with: python <br>
+                    created a machine learning movie selector
             </div>
 
             <div class="project_box">
                 <p class="project_title">OS library</p>
-                <p class="project_description">built with: C++ <br>
-                from eecs 482 </p>
+                <p class="project_description">
+                    jan - apr 2019 <br>
+                    built with: C++ <br>
+                    created a custom thread library
+                </p>
             </div>
 
             <div class="project_box">
                 <p class="project_title">insta485</p>
-                <p class="project_description">built with: HTML/CSS, Javascript/jQuery, SQL, python <br>
-                from eecs 485 </p>
+                <p class="project_description">
+                    sep - dec 2018 <br>
+                    built with: HTML/CSS, Javascript/jQuery, SQL, python <br>
+                    recreated instagram
+            </p>
             </div>
 
         </div>
