--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <p class="project_title">Video Game Portfolio Website</p>
                 <p class="project_subtitle">
                     2020 – present <br>
-                    built with: HTML/CSS, Javascript <br>
+                    HTML/CSS, Javascript <br>
                 </p>
                 <p class="project_description">
                     
@@ -135,7 +135,7 @@
                 <p class="project_title">Personal Website</p>
                 <p class="project_subtitle">
                     2020 – present <br>
-                    built with: HTML/CSS, Javascript 
+                    HTML/CSS, Javascript 
                 </p>
                 <p class="project_description">
                     
@@ -146,7 +146,7 @@
                 <p class="project_title">Ghost Hosts</p>
                 <p class="project_subtitle">
                     mar - apr 2020 <br>
-                    built with: C# + Unity<br>
+                    C# + Unity<br>
                 </p>
                 <p class="project_description">
                     escape haunted house 
@@ -157,7 +157,7 @@
                 <p class="project_title">Conveyor Cat</p>
                 <p class="project_subtitle">
                     feb 2020 <br>
-                    built with: C# + Unity<br>
+                    C# + Unity<br>
                 </p>
                 <p class="project_description">
                     feed the cats sushi 
@@ -168,7 +168,7 @@
                 <p class="project_title">Legend of Zelda </p>
                 <p class="project_subtitle">
                     jan 2020 <br>
-                    built with: C# + Unity <br>
+                    C# + Unity <br>
                 </p>
                 <p class="project_description">
                     the original NES legend of zelda game
@@ -180,7 +180,7 @@
                 <p class="project_title">EZscan </p>
                 <p class="project_subtitle">
                     jun 2019 <br>
-                    built with: swift <br>
+                    swift <br>
                 </p>
                 <p class="project_description">
                     a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet 
@@ -192,7 +192,7 @@
                 <p class="project_title">movie selector </p>
                 <p class="project_subtitle">
                     sep - dec 2019 <br> 
-                    built with: python <br>
+                    python <br>
                 </p>
                 <p class="project_description">
                     created a machine learning movie selector
@@ -203,7 +203,7 @@
                 <p class="project_title">OS library</p>
                 <p class="project_subtitle">
                     jan - apr 2019 <br>
-                    built with: C++ <br>
+                    C++ <br>
                 </p>
                 <p class="project_description">
                     created a custom thread library
@@ -214,7 +214,7 @@
                 <p class="project_title">insta485</p>
                 <p class="project_subtitle">
                     sep - dec 2018 <br>
-                    built with: HTML/CSS, Javascript/jQuery, SQL, python <br>
+                    HTML/CSS, Javascript/jQuery, SQL, python <br>
                 </p>
                 <p class="project_description">
                     recreated instagram
