--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <div class="skills_box">
                 <p class="skills_title">software</p>
-                <p class="skills_list">Unity, Solidworks, Dreamweaver, Premiere</p>
+                <p class="skills_list">Unity, Solidworks</p>
             </div>
 
             <div class="skills_box">
