--- a/index.html
+++ b/index.html
@@ -91,16 +91,19 @@
             <div class="skills_box">
                 <p class="skills_title">programming languages</p>
                 <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
+                <button class="skills_expand_button" onclick="">╲╱</button>
             </div>
 
             <div class="skills_box">
                 <p class="skills_title">software</p>
                 <p class="skills_list">Unity, Solidworks</p>
+                <button class="skills_expand_button" onclick="">╲╱</button>
             </div>
 
             <div class="skills_box">
                 <p class="skills_title">foreign languages</p>
                 <p class="skills_list">mandarin chinese, french, japanese</p>
+                <button class="skills_expand_button" onclick="">╲╱</button>
             </div>
 
         </div>
