--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
                 <p class="skills_title">programming languages</p>
                 <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
                 <button class="skills_expand_button" onclick="">╲╱</button>
+
+                <div class="skills_smaller_container">
+                    <button class="skills_left_button" onclick="">╲╱</button>
+                    <div class="skills_smaller_box">
+                        c/c++/c#
+                    </div>
+
+                    <div class="skills_smaller_box">
+                        python
+                    </div>
+
+                    <div class="skills_smaller_box">
+                        MATLAB
+                    </div>
+                    <button class="skills_right_button" onclick="">╲╱</button>
+                </div>
             </div>
 
             <div class="skills_box">
