--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
             <div class="skills_box">
                 <p class="skills_title">programming languages</p>
                 <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
-                <button class="skills_expand_button" onclick="">╲╱</button>
 
                 <div class="skills_smaller_container">
+                    <button class="skills_expand_button" onclick="expandSkillsBox(this)">╲╱</button>
+
                     <button class="skills_left_button" onclick="">╲╱</button>
                     <div class="skills_smaller_box">
                         c/c++/c#
