--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 
                     <button class="skills_left_button" onclick="">╲╱</button>
                     <div class="skills_smaller_box">
-                        c/c++/c#
+                        <p class="skills_smaller_title">c/c++/c#</p>
+                        <p class="skills_smaller_description">
+                            the primary language i learned coding on.
+                        </p>
+
                     </div>
 
                     <div class="skills_smaller_box">
