--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
 
                 <div class="skills_smaller_container">
-                    <button class="skills_expand_button" onclick="expandSkillsBox(this)">╲╱</button>
+                    <button class="skills_expand_button" onclick="expandSkillsBox()">╲╱</button>
 
                     <button class="skills_left_button" onclick="">╲╱</button>
                     <div class="skills_smaller_box">
