--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="skills_smaller_container">
                     <button class="skills_expand_button" onclick="expandSkillsBox()">╲╱</button>
 
-                    <button class="skills_left_button" onclick="">╲╱</button>
+                    <!-- <button class="skills_left_button" onclick="">╲╱</button>
                     <div class="skills_smaller_box">
                         <p class="skills_smaller_title">c/c++/c#</p>
                         <p class="skills_smaller_description">
@@ -111,7 +111,8 @@
                     <div class="skills_smaller_box">
                         MATLAB
                     </div>
-                    <button class="skills_right_button" onclick="">╲╱</button>
+                    <button class="skills_right_button" onclick="">╲╱</button> -->
+
                 </div>
             </div>
 
