--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 <p class="skills_title">programming languages</p>
                 <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
 
-                <div class="skills_smaller_container">
+                <!-- <div class="skills_smaller_container">
                     <button class="skills_expand_button" onclick="expandSkillsBox()">╲╱</button>
 
-                    <!-- <button class="skills_left_button" onclick="">╲╱</button>
+                    <button class="skills_left_button" onclick="">╲╱</button>
                     <div class="skills_smaller_box">
                         <p class="skills_smaller_title">c/c++/c#</p>
                         <p class="skills_smaller_description">
@@ -112,21 +112,23 @@
                         MATLAB
                     </div>
                     <button class="skills_right_button" onclick="">╲╱</button> -->
-
+                    
                 </div>
             </div>
 
             <div class="skills_box">
                 <p class="skills_title">software</p>
                 <p class="skills_list">Unity, Solidworks</p>
-                <button class="skills_expand_button" onclick="">╲╱</button>
             </div>
+
+            <!-- <button class="skills_expand_button" onclick="">╲╱</button> -->
 
             <div class="skills_box">
                 <p class="skills_title">foreign languages</p>
                 <p class="skills_list">mandarin chinese, french, japanese</p>
-                <button class="skills_expand_button" onclick="">╲╱</button>
             </div>
+            <!-- <button class="skills_expand_button" onclick="">╲╱</button> -->
+
 
         </div>
         <br><br>
