--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
                 <p class="skills_title">programming languages</p>
                 <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
 
-                <!-- <div class="skills_smaller_container">
-                    <button class="skills_expand_button" onclick="expandSkillsBox()">╲╱</button>
+
+                <div class="skills_smaller_container">
+                    <button class="skills_expand_button" onclick="expandSkillsBox(this)">╲╱</button>
 
                     <button class="skills_left_button" onclick="">╲╱</button>
                     <div class="skills_smaller_box">
@@ -111,12 +112,29 @@
                     <div class="skills_smaller_box">
                         MATLAB
                     </div>
-                    <button class="skills_right_button" onclick="">╲╱</button> -->
+                    <button class="skills_right_button" onclick="">╲╱</button>
             </div>
 
             <div class="skills_box">
                 <p class="skills_title">software</p>
                 <p class="skills_list">Unity, Solidworks</p>
+
+                <button class="skills_left_button" onclick="">╲╱</button>
+                <div class="skills_smaller_box">
+                    <p class="skills_smaller_title">Unity</p>
+                    <p class="skills_smaller_description">
+                        
+                    </p>
+                </div>
+
+                <div class="skills_smaller_box">
+                    <p class="skills_smaller_title">Solidworks</p>
+                    <p class="skills_smaller_description">
+
+                    </p>
+                </div>
+
+                <button class="skills_right_button" onclick="">╲╱</button>
             </div>
 
             <!-- <button class="skills_expand_button" onclick="">╲╱</button> -->
