--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                         MATLAB
                     </div>
                     <button class="skills_right_button" onclick="">╲╱</button>
+                </div>
             </div>
 
             <div class="skills_box">
