--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="skills_smaller_box">
                         <p class="skills_smaller_title">c/c++/c#</p>
                         <p class="skills_smaller_description">
-                            the primary language i learned coding on.
+                            <!-- the primary language i learned coding on. -->
                         </p>
 
                     </div>
