--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <img src="assets/journal.gif" id="journal_gif">
     <span id="name"> DEANNA SHIH <br> </span>
     </div>
-    <span id="subname">
+    <!-- <span id="subname">
     bse computer science <br>
     university of michigan '20<br>
-    </span>
+    </span> -->
 <!--    <img src="assets/gudetama.gif" id="gudetama_gif">-->
 	<div class = "gudetama-container"><img src="assets/gudetama.png" id="gudetama_img"></div>
     <button id="scroll_button" onclick="scrollToId('about me')">╲╱</button>
