--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
                 <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
 
                 <button class="skills_expand_button" onclick="expandSkillsBox(this)">╲╱</button>
-
                 <div class="skills_smaller_container">
                     <button class="skills_left_button" onclick="">╲╱</button>
                     <div class="skills_smaller_box">
@@ -114,12 +113,14 @@
                     <button class="skills_right_button" onclick="">╲╱</button>
                 </div>
             </div> 
-            <button class="skills_expand_button" onclick="">╲╱</button>
+
 
             <div class="skills_box">
                 <p class="skills_title">software</p>
                 <p class="skills_list">Unity, Solidworks</p>
 
+
+                <button class="skills_expand_button" onclick="expandSkillsBox()">╲╱</button>
                 <div class="skills_smaller_container">
                     <button class="skills_left_button" onclick="">╲╱</button>
                     <div class="skills_smaller_box">
@@ -145,8 +146,32 @@
                 <p class="skills_title">foreign languages</p>
                 <p class="skills_list">mandarin chinese, french, japanese</p>
             </div>
-            <!-- <button class="skills_expand_button" onclick="">╲╱</button> -->
+            <button class="skills_expand_button" onclick="expandSkillsBox()">╲╱</button>
+            <div class="skills_smaller_container">
+                <button class="skills_left_button" onclick="">╲╱</button>
+                <div class="skills_smaller_box">
+                    <p class="skills_smaller_title">mandarin chinese</p>
+                    <p class="skills_smaller_description">
+                        
+                    </p>
+                </div>
 
+                <div class="skills_smaller_box">
+                    <p class="skills_smaller_title">french</p>
+                    <p class="skills_smaller_description">
+
+                    </p>
+                </div>
+
+                <div class="skills_smaller_box">
+                    <p class="skills_smaller_title">japanese</p>
+                    <p class="skills_smaller_description">
+
+                    </p>
+                </div>
+
+                <button class="skills_right_button" onclick="">╲╱</button>
+            </div>
 
         </div>
     </div>
