--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 </nav>
 </div>
 
+<button id="scroll_to_top_button" onclick="scrollToTop()">╲╱</button>
+
 <div class="banner">
     <div class="banner_gifs">
     <img src="assets/computer.gif" id="computer_gif">
