--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 </nav>
 </div>
 
-<button id="scroll_to_top_button" onclick="scrollToTop()">╲╱</button>
+<div>
+    <button id="scroll_to_top_button" onclick="scrollToTop()">╲╱</button>
+</div>
 
 <div class="banner">
     <div class="banner_gifs">
