--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </nav>
 </div>
 
-<div>
+<div id="scroll_to_top_div">
     <button id="scroll_to_top_button" onclick="scrollToTop()">╲╱</button>
 </div>
 
