--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 </head>
 
 <div id="navbar">
-<nav>
-    <div class="progress-container">
-        <div class="progress-bar" id="myBar"></div>
-    </div>
-	<button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button> 
-    <a href="javascript:void()" onclick="scrollToId('about me')">about me</button>
-    <a href="javascript:void()" onclick="scrollToId('skills')">skills</a>
-    <a href="javascript:void()" onclick="scrollToId('projects')">projects</a>
-    <a href="javascript:void()" onclick="scrollToId('contact')">contact</a>
-</nav>
+    <nav>
+        <div class="progress-container">
+            <div class="progress-bar" id="myBar"></div>
+        </div>
+        <button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button> 
+        <a href="javascript:void()" onclick="scrollToId('about me')">about me</a>
+        <a href="javascript:void()" onclick="scrollToId('skills')">skills</a>
+        <a href="javascript:void()" onclick="scrollToId('projects')">projects</a>
+        <a href="javascript:void()" onclick="scrollToId('contact')">contact</a>
+    </nav>
 </div>
 
 <div id="scroll_to_top_div">
