--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <body>
     
-    <div class="profile pic">
+    <div>
         <img src="assets/profilepic.jpg" class="profilepic">
     </div>
 
