--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 <body>
     
-    <div>
-        <img src="assets/profilepic.jpg" class="profilepic">
+    <div class="profile pic">
+        <img src="assets/profilepic.jpg" id="profilepic">
     </div>
 
     <div class="section">
