--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
 <body>
     
-    <div class="profile pic">
-        <img src="assets/profilepic.jpg" id="profilepic">
-    </div>
+    <!-- <div class="profile pic">
+    </div> -->
 
     <div class="section">
         <span class="section_header" id="about me">hi there!<br><br> </span>
+        <img src="assets/profilepic.jpg" id="profilepic">
         <span class="section_content">
             <div>
             My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
