--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
 </div>
 
 <body>
-    
-    <!-- <div class="profile pic">
-    </div> -->
+
 
     <div class="section">
         <span class="section_header" id="about me">hi there!<br><br> </span>
+            
+    <div class="profile pic">
         <img src="assets/profilepic.jpg" id="profilepic">
+
+    </div>
         <span class="section_content">
             <div>
             My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
