--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <p class="skills_title">programming languages</p>
                     <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
 
-                    <button class="skills_expand_button" onclick="expandSkillsBox(this)">╲╱</button>
+                    <button class="skills_expand_button" onclick="expandSkillsBox(skills_expand_button.productsArray[0])">╲╱</button>
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="">╲╱</button>
                         <div class="skills_smaller_box">
