--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <p class="skills_title">programming languages</p>
                     <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
 
-                    <button class="skills_expand_button" onclick="expandSkillsBox(skills_expand_button.productsArray[0])">╲╱</button>
+                    <button class="skills_expand_button" onclick="expandSkillsBox(0)">╲╱</button>
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="">╲╱</button>
                         <div class="skills_smaller_box">
@@ -122,7 +122,7 @@
                     <p class="skills_list">Unity, Solidworks</p>
 
 
-                    <button class="skills_expand_button" onclick="expandSkillsBox()">╲╱</button>
+                    <button class="skills_expand_button" onclick="expandSkillsBox(1)">╲╱</button>
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="">╲╱</button>
                         <div class="skills_smaller_box">
@@ -148,7 +148,7 @@
                     <p class="skills_title">foreign languages</p>
                     <p class="skills_list">mandarin chinese, french, japanese</p>
 
-                    <button class="skills_expand_button" onclick="expandSkillsBox()">╲╱</button>
+                    <button class="skills_expand_button" onclick="expandSkillsBox(2)">╲╱</button>
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="">╲╱</button>
                         <div class="skills_smaller_box">
