--- a/index.html
+++ b/index.html
@@ -98,19 +98,25 @@
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="">╲╱</button>
                         <div class="skills_smaller_box">
-                            <p class="skills_smaller_title">c/c++/c#</p>
-                            <p class="skills_smaller_description">
-                                <!-- the primary language i learned coding on. -->
-                            </p>
+                            <span class="skills_smaller_title">c/c++/c#</span>
+                            <span class="skills_smaller_description">
+                                the primary language i learned coding on!
+                            </span>
 
                         </div>
 
                         <div class="skills_smaller_box">
-                            python
+                            <span class="skills_smaller_title">python</span>
+                            <span class="skills_smaller_description">
+                                snek
+                            </span>
                         </div>
 
                         <div class="skills_smaller_box">
-                            MATLAB
+                            <span class="skills_smaller_title">MATLAB</span>
+                            <span class="skills_smaller_description">
+                                the first language i used to print "hello world"
+                            </span>
                         </div>
                         <button class="skills_right_button" onclick="">╲╱</button>
                     </div>
