--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="">╲╱</button>
                         <div class="skills_smaller_box">
-                            <span class="skills_smaller_title">c/c++/c#</span>
+                            <span class="skills_smaller_title">c++</span>
                             <br>
                             <span class="skills_smaller_description">
                                 the primary language i learned coding on!
