--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
             <div class="skills_container">
                 <div class="skills_box">
                     <p class="skills_title">programming languages</p>
-                    <p class="skills_list">c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift</p>
+                    <p class="skills_list">C/C++/C#, Python, HTML/CSS, Javascript, MATLAB, Verilog, Swift</p>
 
                     <button class="skills_expand_button" onclick="expandSkillsBox(0)">+</button>
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="">╲╱</button>
                         <div class="skills_smaller_box">
-                            <span class="skills_smaller_title">c++</span>
+                            <span class="skills_smaller_title">C++</span>
                             <br>
                             <span class="skills_smaller_description">
                                 the primary language i learned coding on!
@@ -107,10 +107,26 @@
                         </div>
 
                         <div class="skills_smaller_box">
-                            <span class="skills_smaller_title">python</span>
+                            <span class="skills_smaller_title">Python</span>
                             <br>
                             <span class="skills_smaller_description">
                                 
+                            </span>
+                        </div>
+
+                        <div class="skills_smaller_box">
+                            <span class="skills_smaller_title">HTML/CSS</span>
+                            <br>
+                            <span class="skills_smaller_description">
+
+                            </span>
+                        </div>
+
+                        <div class="skills_smaller_box">
+                            <span class="skills_smaller_title">Javascript</span>
+                            <br>
+                            <span class="skills_smaller_description">
+                                have also used jquery and react :) 
                             </span>
                         </div>
 
@@ -119,6 +135,22 @@
                             <br>
                             <span class="skills_smaller_description">
                                 the first language i used to print "hello world"
+                            </span>
+                        </div>
+
+                        <div class="skills_smaller_box">
+                            <span class="skills_smaller_title">Verilog</span>
+                            <br>
+                            <span class="skills_smaller_description">
+                                an HDL (hardware descriptor language)
+                            </span>
+                        </div>
+
+                        <div class="skills_smaller_box">
+                            <span class="skills_smaller_title">Swift</span>
+                            <br>
+                            <span class="skills_smaller_description">
+
                             </span>
                         </div>
                         <button class="skills_right_button" onclick="">╲╱</button>
