--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                     <button class="skills_expand_button" onclick="expandSkillsBox(0)">+</button>
                     <div class="skills_smaller_container">
-                        <button class="skills_left_button" onclick="">╲╱</button>
+                        <button class="skills_left_button" onclick="prevCarousel(0)">╲╱</button>
                         <div class="skills_smaller_box">
                             <span class="skills_smaller_title">C++</span>
                             <br>
@@ -153,7 +153,7 @@
 
                             </span>
                         </div>
-                        <button class="skills_right_button" onclick="">╲╱</button>
+                        <button class="skills_right_button" onclick="nextCarousel(0)">╲╱</button>
                     </div>
                 </div> 
 
