--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             </span>
                         </div>
 
-                        <div class="skills_smaller_box">
+                        <!-- <div class="skills_smaller_box">
                             <span class="skills_smaller_title">Javascript</span>
                             <br>
                             <span class="skills_smaller_description">
@@ -152,7 +152,7 @@
                             <span class="skills_smaller_description">
 
                             </span>
-                        </div>
+                        </div> -->
                         <button class="skills_right_button" onclick="nextCarousel(0)">╲╱</button>
                     </div>
                 </div> 
