--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <button class="skills_expand_button" onclick="expandSkillsBox(0)">+</button>
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="prevCarousel(0)">╲╱</button>
-                        <div class="skills_smaller_box">
+                        <div class="skills_smaller_box current_slide">
                             <span class="skills_smaller_title">C++</span>
                             <br>
                             <span class="skills_smaller_description">
@@ -121,7 +121,7 @@
                             </span>
                         </div>
 
-                        <!-- <div class="skills_smaller_box">
+                        <div class="skills_smaller_box">
                             <span class="skills_smaller_title">Javascript</span>
                             <br>
                             <span class="skills_smaller_description">
@@ -151,7 +151,7 @@
                             <span class="skills_smaller_description">
 
                             </span>
-                        </div> -->
+                        </div>
                         <button class="skills_right_button" onclick="nextCarousel(0)">╲╱</button>
                     </div>
                 </div> 
