--- a/index.html
+++ b/index.html
@@ -96,62 +96,62 @@
                     <button class="skills_expand_button" onclick="expandSkillsBox(0)">+</button>
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="prevCarousel(0)">╲╱</button>
-                        <div class="skills_smaller_box current_slide">
+                        <span class="skills_smaller_box current_slide">
                             <span class="skills_smaller_title">C++</span>
                             <br>
                             <span class="skills_smaller_description">
                                 the primary language i learned coding on!
                             </span>
 
-                        </div>
+                        </span>
 
-                        <div class="skills_smaller_box">
+                        <span class="skills_smaller_box">
                             <span class="skills_smaller_title">Python</span>
                             <br>
                             <span class="skills_smaller_description">
                                 
                             </span>
-                        </div>
+                        </span>
 
-                        <div class="skills_smaller_box">
+                        <span class="skills_smaller_box">
                             <span class="skills_smaller_title">HTML/CSS</span>
                             <br>
                             <span class="skills_smaller_description">
 
                             </span>
-                        </div>
+                        </span>
 
-                        <div class="skills_smaller_box">
+                        <span class="skills_smaller_box">
                             <span class="skills_smaller_title">Javascript</span>
                             <br>
                             <span class="skills_smaller_description">
                                 have also used jquery and react :) 
                             </span>
-                        </div>
+                        </span>
 
-                        <div class="skills_smaller_box">
+                        <span class="skills_smaller_box">
                             <span class="skills_smaller_title">MATLAB</span>
                             <br>
                             <span class="skills_smaller_description">
                                 the first language i used to print "hello world"
                             </span>
-                        </div>
+                        </span>
 
-                        <div class="skills_smaller_box">
+                        <span class="skills_smaller_box">
                             <span class="skills_smaller_title">Verilog</span>
                             <br>
                             <span class="skills_smaller_description">
                                 an HDL (hardware descriptor language)
                             </span>
-                        </div>
+                        </span>
 
-                        <div class="skills_smaller_box">
+                        <span class="skills_smaller_box">
                             <span class="skills_smaller_title">Swift</span>
                             <br>
                             <span class="skills_smaller_description">
 
                             </span>
-                        </div>
+                        </span>
                         <button class="skills_right_button" onclick="nextCarousel(0)">╲╱</button>
                     </div>
                 </div> 
