--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                     <button class="skills_expand_button" onclick="expandSkillsBox(1)">+</button>
                     <div class="skills_smaller_container">
-                        <button class="skills_left_button" onclick="">╲╱</button>
+                        <button class="skills_left_button" onclick="leftCarousel(1)">╲╱</button>
                         <div class="skills_smaller_box">
                             <span class="skills_smaller_title">unity</span>
                             <br>
@@ -181,7 +181,7 @@
                             </span>
                         </div>
 
-                        <button class="skills_right_button" onclick="">╲╱</button>
+                        <button class="skills_right_button" onclick="rightCarousel(1)">╲╱</button>
                     </div>
                 </div>
 
@@ -192,7 +192,7 @@
 
                     <button class="skills_expand_button" onclick="expandSkillsBox(2)">+</button>
                     <div class="skills_smaller_container">
-                        <button class="skills_left_button" onclick="">╲╱</button>
+                        <button class="skills_left_button" onclick="leftCarousel(2)">╲╱</button>
                         <div class="skills_smaller_box">
                             <span class="skills_smaller_title">mandarin chinese</span>
                             <br>
@@ -217,7 +217,7 @@
                             </span>
                         </div>
 
-                        <button class="skills_right_button" onclick="">╲╱</button>
+                        <button class="skills_right_button" onclick="rightCarousel(2)">╲╱</button>
                     </div>
                 </div>
 
