--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <button class="skills_expand_button" onclick="expandSkillsBox(1)">+</button>
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="leftCarousel(1)">╲╱</button>
-                        <div class="skills_smaller_box">
+                        <div class="skills_smaller_box current_slide">
                             <span class="skills_smaller_title">unity</span>
                             <br>
                             <span class="skills_smaller_description">
@@ -193,7 +193,7 @@
                     <button class="skills_expand_button" onclick="expandSkillsBox(2)">+</button>
                     <div class="skills_smaller_container">
                         <button class="skills_left_button" onclick="leftCarousel(2)">╲╱</button>
-                        <div class="skills_smaller_box">
+                        <div class="skills_smaller_box current_slide">
                             <span class="skills_smaller_title">mandarin chinese</span>
                             <br>
                             <span class="skills_smaller_description">
