--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                 <div class="skills_box">
                     <p class="skills_title">software</p>
-                    <p class="skills_list">Unity, Solidworks</p>
+                    <p class="skills_list">Unity, Solidworks, Dreamweaver, Premiere, Lightroom</p>
 
 
                     <button class="skills_expand_button" onclick="expandSkillsBox(1)">+</button>
