--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                 <div class="skills_box">
                     <p class="skills_title">software</p>
-                    <p class="skills_list">Unity, Solidworks, Dreamweaver, Premiere, Lightroom</p>
+                    <p class="skills_list">Unity, Solidworks, Adobe Creative Cloud</p>
 
 
                     <button class="skills_expand_button" onclick="expandSkillsBox(1)">+</button>
@@ -178,6 +178,14 @@
                             <br>
                             <span class="skills_smaller_description">
                                 
+                            </span>
+                        </div>
+
+                        <div class="skills_smaller_box">
+                            <span class="skills_smaller_title">adobe creative cloud</span>
+                            <br>
+                            <span class="skills_smaller_description">
+                            dreamweaver, premiere pro, lightroom
                             </span>
                         </div>
 
